# cardano

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/workflows/: tests.yml
cardano_tx_utxo_csv/: cardano_tx_utxo.csv  cardano_tx_utxo_input.csv  cardano_tx_utxo_input_amt.csv  cardano_tx_utxo_output.csv  cardano_tx_utxo_output_amt.csv
database_management/: env.py
database_management/cardano/: cardano_tables.py
database_management/versions/: 0b94d65f554c_removed_utxo_tx_hash_data_hash_from_.py  2d05878fcdc6_changed_the_columns_of_s3_to_db_import_.py  3b20356f58de_changed_data_hash_of_tx_utxo_amount_to_.py  4a399294a2e1_added_parent_id_for_tx_utxo_input_amt_.py  85caa57ec4f3_create_sqlalchemy_tables.py  9bc75f60b57c_change_in_columns_for_s3_to_db_import_.py  a6f2b5d040a9_updated_sqlalchemy_tables.py  b0673669b6c8_edited_block_time_from_integer_to_.py  b1fe9c6fa97c_removed_block_height_column_in_cardano_.py  d063573f99e5_changed_valid_contract_column_of_.py  d0b7a8a96849_included_timezone_false_and_server_.py  (+1 more)
ideascale/: extract_company_from_company_link.py  get_company_link_ideascale.py  get_github_profile.py  scrape_applicant_name.py  scrape_feasibility_details_async.py  scrape_idea_details.py
integration_tests/: conftest.py  test.env
project_catalyst/: extract_company_from_company_link.py  get_github_profile.py  scrape_applicant_name_prohect_catalyst_single.py  scrape_applicant_name_project_catalyst_new.py  scrape_company_links_from_csv.py  scrape_single_company_link.py  scrape_team_names.py
(+62 files in other folders)
